--- a/index.html
+++ b/index.html
@@ -186,19 +186,8 @@ Our Main Work
 
                                         <!--------------------------Five Box------------------------------>
 
-                                        <div class="mi6">
-                                            <div class="man6">
-                                                <div class="pic6">
-                                                    <img src="non-drop.png" alt="">
-                                                </div>
-                                                <div class="parag6">
-                                                    <h1>Buy<strong> Non-Drop</strong> Real Original Followers And Likes
-                                                    </h1>
-                                                    <a href="https://mysmmshop.com/ref/lMgo" target="_blank"
-                                                        class="link6">From
-                                                        Here</a>
-                                                </div>
-                                                <!---------------main work comp.-->
+                          
+                                      
     </main>
     <!-----------fotter-->
     <footer id="contectus">
@@ -231,7 +220,7 @@ Our Main Work
             <h2>Parikshit Kumawat</h2>
         </div>
         <hr>
-        <p class="copyright">Digital Smm Services © 2022 - All Rights Reserved</p>
+        <p class="copyright">Digital Smm Services © 2022</p>
         </div>
     </footer>
     <!--------------------------
